Update native build gradle support.